--- a/sbbj_tpg/.gitignore
+++ b/sbbj_tpg/.gitignore
@@ -1,1 +1,17 @@
 /APIExecutionExample3.class
+/APIExecutionExample.class
+/APIExecutionExample2.class
+/Action.class
+/Instruction.class
+/Learner.class
+/Miscellaneous$1.class
+/Miscellaneous$2.class
+/Miscellaneous.class
+/OpenBoolean.class
+/OpenDouble.class
+/Pair.class
+/TPGAlgorithm.class
+/TPGLearn.class
+/TPGPlay.class
+/Team$1.class
+/Team.class
